refactored organization to tennant
